--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "test": "react-scripts-ts react-scripts-ts test --env=jsdom",
+    "test": "react-scripts-ts test --env=jsdom",
     "test-watch": "node ./node_modules/.bin/react-scripts-ts --inspect test --env=jsdom --runInBand",
     "eject": "react-scripts-ts eject"
   },
@@ -33,6 +33,7 @@
     "@types/superagent": "^3.8.5",
     "@types/url-join": "^0.8.2",
     "@types/uuid": "^3.4.4",
+    "redux-mock-store": "^1.5.3",
     "tquinlan92-typescript-redux-utils": "^1.0.3",
     "tslint-microsoft-contrib": "^6.0.0",
     "typescript": "^3.1.6"
@@ -41,6 +42,7 @@
     "ajv": "^6.6.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
     "history": "^4.7.2",
     "jest": "^23.6.0",
     "pouchdb-browser": "^7.0.0",
@@ -52,7 +54,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "react-scripts-ts": "^4.0.8",
+    "react-scripts-ts": "3.1.0",
     "redux-devtools-extension": "^2.13.7",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
