--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,9 @@ jobs:
 
 workflows:
   version: 2
-  only_test:
+  build:
     jobs:
       - build
       - test
+          requires: 
+            - build
