--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ version: 2
 defaults: &defaults
   working_directory: ~/repo
   docker:
-    - image: circleci/node:10.15.0
+    - image: circleci/node:10
 
 jobs:
   build: 
@@ -20,23 +20,14 @@ jobs:
           - v1-dependencies-
       - run: sudo npm i -g npm
       - run: npm ci
+      - run: npm test
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
-  test:
-    <<: *defaults  
-    steps:
-      - checkout
-      - run:
-          name: Run tests
-          command: npm test
 
 workflows:
   version: 2
   build:
     jobs:
       - build
-      - test:
-          requires: 
-            - build
