--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ version: 2
 defaults: &defaults
   working_directory: ~/repo
   docker:
-    - image: circleci/node:10
+    - image: circleci/node:10-browsers
 
 jobs:
   build: 
@@ -20,7 +20,11 @@ jobs:
             - v1-dependencies-
       - run: sudo npm i -g npm
       - run: npm ci
+      - run: npm run build
       - run: npm test
+      - run: npm run test-e2e
+      - store_test_results:
+          path: /tmp/test-results
       - save_cache:
           key: v1-dependencies-{{ checksum "package-lock.json" }}
           paths:
