--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm test
+      - run: cd build && python -m SimpleHTTPServer 3000 &
       - run: npm run test-e2e
       - store_test_results:
           path: /tmp/test-results
