--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "react-scripts-ts test --env=jsdom",
     "test-watch": "node ./node_modules/.bin/react-scripts-ts --inspect test --env=jsdom --runInBand",
     "test-e2e": "testcafe chrome:headless ./src/e2eTest/index.ts",
+    "test-e2e-report": "testcafe chrome:headless ./src/e2eTest/index.ts -r xunit:/tmp/test-results/res.xml",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/uuid": "^3.4.4",
     "redux-mock-store": "^1.5.3",
     "testcafe": "^0.23.3",
+    "testcafe-reporter-xunit": "^2.1.0",
     "tquinlan92-typescript-redux-utils": "^1.0.3",
     "tslint-microsoft-contrib": "^6.0.0",
     "typescript": "^3.1.6"
