--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm test
-      - run: cd build && python -m SimpleHTTPServer 3000 >> /dev/null 2>&1 &
-      - run: npm run test-e2e-report
+      - run: (cd build && python -m SimpleHTTPServer 3000 >> /dev/null 2>&1 &) &&  (npm run test-e2e-report)
       - store_test_results:
           path: /tmp/test-results
       - save_cache:
