--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       - run: npm run build
       - run: npm test
       - run: sudo npm i -g pouchdb-server
-      - run: (pouchdb-server --port 5984 &) && (cd build && python -m SimpleHTTPServer 3000 >> /dev/null 2>&1 &) &&  (npm run test-e2e-report)
+      - run: (pouchdb-server --sqlite --port 5984 &) && (cd build && python -m SimpleHTTPServer 3000 >> /dev/null 2>&1 &) &&  (npm run test-e2e-report)
       - store_test_results:
           path: /tmp/test-results
       - save_cache:
