--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
+    "test": "react-scripts-ts test --env=jsdom --reporters=jest-junit",
     "test-watch": "node ./node_modules/.bin/react-scripts-ts --inspect test --env=jsdom --runInBand",
     "test-e2e": "testcafe chrome:headless ./src/e2eTest/index.ts",
     "test-e2e-report": "testcafe chrome:headless ./src/e2eTest/index.ts -r xunit:/tmp/test-results/res.xml",
@@ -35,6 +35,7 @@
     "@types/superagent": "^3.8.5",
     "@types/url-join": "^0.8.2",
     "@types/uuid": "^3.4.4",
+    "jest-junit": "^5.2.0",
     "redux-mock-store": "^1.5.3",
     "testcafe": "^0.23.3",
     "testcafe-reporter-xunit": "^2.1.0",
@@ -75,6 +76,10 @@
     },
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
+    ],
+    "reporters": [
+      "default",
+      "jest-junit"
     ]
   },
   "browserslist": [
