--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom --reporters=jest-junit",
+    "test": "react-scripts-ts test --env=jsdom --reporters=default --reporters=jest-junit --coverage --ci",
     "test-watch": "node ./node_modules/.bin/react-scripts-ts --inspect test --env=jsdom --runInBand",
     "test-e2e": "testcafe chrome:headless ./src/e2eTest/index.ts",
     "test-e2e-report": "testcafe chrome:headless ./src/e2eTest/index.ts -r xunit:/tmp/test-results/res.xml",
