--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
         "**/*.test.tsx",
         "**/*testUtils.ts",
         "**/*testUtils.tsx",
-        "src/setupTests.ts"
+        "src/setupTests.ts",
+        "blueprint-templates"
     ]
 }
