--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/history": "^4.7.2",
     "@types/jest": "^23.3.9",
     "@types/node": "^10.12.9",
+    "@types/pouchdb-adapter-memory": "^6.1.2",
     "@types/pouchdb-browser": "^6.1.2",
     "@types/pouchdb-find": "^6.3.3",
     "@types/react": "^16.7.6",
@@ -36,6 +37,7 @@
     "@types/url-join": "^0.8.2",
     "@types/uuid": "^3.4.4",
     "jest-junit": "^5.2.0",
+    "pouchdb-adapter-memory": "^7.0.0",
     "redux-mock-store": "^1.5.3",
     "testcafe": "^0.23.3",
     "testcafe-reporter-xunit": "^2.1.0",
