--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^3.0.1",
     "@types/enzyme": "^3.1.15",
     "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/fetch-mock": "^7.2.2",
     "@types/history": "^4.7.2",
     "@types/jest": "^23.3.9",
     "@types/node": "^10.12.9",
@@ -33,12 +34,15 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-router-redux": "^5.0.17",
     "@types/redux-logger": "^3.0.6",
+    "@types/shortid": "0.0.29",
     "@types/superagent": "^3.8.5",
     "@types/url-join": "^0.8.2",
     "@types/uuid": "^3.4.4",
+    "fetch-mock": "^7.3.0",
     "jest-junit": "^5.2.0",
     "pouchdb-adapter-memory": "^7.0.0",
     "redux-mock-store": "^1.5.3",
+    "shortid": "^2.2.14",
     "testcafe": "^0.23.3",
     "testcafe-reporter-xunit": "^2.1.0",
     "tquinlan92-typescript-redux-utils": "^1.0.3",
