--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,26 @@
 {
-    "extends": "./tsconfig.paths.json",
-    "compilerOptions": {
-        "allowJs": true,
-        "sourceMap": true,
-        "target": "es5",
-        "jsx": "react",
-        "module": "es2015",
-        "moduleResolution": "node",
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "declaration": false,
-        "noUnusedLocals": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "keyofStringsOnly": true,
-        "removeComments": true,
-        "strictNullChecks": true,
-        "watch": true,
-        "lib": [
-            "es6",
-            "es7",
-            "dom",
-            "es2017"
-        ],
-        "types": [
-            "testcafe"
-        ]
-    },
-    "exclude": [
-        "dist",
-        "node_modules",
-        "**/*.test.ts",
-        "**/*.test.tsx",
-        "**/*testUtils.ts",
-        "**/*testUtils.tsx",
-        "src/setupTests.ts",
-        "blueprint-templates"
-    ]
+  "extends": "./tsconfig.paths.json",
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "preserve"
+  },
+  "include": [
+    "src"
+  ]
 }
