--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/fetch-mock": "^7.2.2",
     "@types/history": "^4.7.2",
-    "@types/jest": "^23.3.14",
-    "@types/node": "^10.12.26",
+    "@types/jest": "24.0.6",
+    "@types/node": "11.9.4",
     "@types/pouchdb-adapter-memory": "^6.1.2",
     "@types/pouchdb-browser": "^6.1.2",
     "@types/pouchdb-find": "^6.3.3",
-    "@types/react": "^16.8.3",
+    "@types/react": "16.8.3",
     "@types/react-beautiful-dnd": "^7.1.2",
-    "@types/react-dom": "^16.8.2",
+    "@types/react-dom": "16.8.2",
     "@types/react-redux": "^7.0.1",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
@@ -38,46 +38,46 @@
     "@types/superagent": "^3.8.5",
     "@types/url-join": "^0.8.2",
     "@types/uuid": "^3.4.4",
-    "babel-preset-react": "^6.24.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-plugin-jest-hoist": "^24.1.0",
+    "babel-preset-jest": "^24.1.0",
+    "customize-cra": "^0.2.11",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-to-json": "^3.3.5",
     "export-from-json": "^1.1.1",
     "fetch-mock": "^7.3.0",
+    "history": "^4.7.2",
     "jest-junit": "^5.2.0",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "pouchdb-adapter-memory": "^7.0.0",
-    "react-app-rewired": "^2.1.0",
-    "react-monaco-editor": "0.22.0",
-    "react-scripts": "^2.1.5",
-    "redux-mock-store": "^1.5.3",
-    "shortid": "^2.2.14",
-    "testcafe": "^0.23.3",
-    "testcafe-reporter-xunit": "^2.1.0",
-    "tquinlan92-typescript-redux-utils": "^1.0.3",
-    "tslint-microsoft-contrib": "^6.0.0",
-    "typescript": "^3.3.3"
-  },
-  "dependencies": {
-    "ajv": "^6.6.2",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "enzyme-to-json": "^3.3.5",
-    "history": "^4.7.2",
-    "jest": "^23.6.0",
     "pouchdb-browser": "^7.0.0",
     "pouchdb-find": "^7.0.0",
-    "react": "^16.6.3",
+    "react": "^16.8.2",
+    "react-app-rewired": "^2.1.0",
     "react-beautiful-dnd": "^10.0.3",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.2",
+    "react-monaco-editor": "0.22.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
+    "react-scripts": "2.1.5",
     "redux-devtools-extension": "^2.13.7",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.14",
     "superagent": "^4.0.0",
+    "testcafe": "^0.23.3",
+    "testcafe-reporter-xunit": "^2.1.0",
+    "tquinlan92-typescript-redux-utils": "^1.0.3",
+    "tslint-microsoft-contrib": "^6.0.0",
+    "typescript": "3.3.3",
     "url-join": "^4.0.0",
     "uuid": "^3.3.2"
   },
+  "dependencies": {},
   "jest": {
     "moduleNameMapper": {
       "^@headless/(.*)$": "<rootDir>/src/headless/$1",
