--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,7 +5,8 @@
             "@headless/*": ["src/headless/*"],
             "@components/*": ["src/components/*"],
             "@database/*": ["src/headless/database/*"],
-            "@utils/*": ["src/utils/*"]
+            "@utils/*": ["src/utils/*"],
+            "@src/*": ["src/*"]
         },
     }
 }
