--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "testcafe": "^0.23.3",
     "testcafe-reporter-xunit": "^2.1.0",
     "tquinlan92-typescript-redux-utils": "^1.0.3",
+    "ts-essentials": "^2.0.2",
     "tslint-microsoft-contrib": "^6.0.0",
     "typescript": "3.3.3",
     "url-join": "^4.0.0",
