--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "start-headless-app-test": "react-app-rewired start --config-overrides config-overrides-headless-test.js",
+    "build-headless-app-test": "react-app-rewired build --config-overrides config-overrides-headless-test.js",
     "test": "react-app-rewired test -w 1 --env=jsdom --reporters=default --reporters=jest-junit --coverage --ci",
     "test-coverage": "react-app-rewired test --coverage",
     "test-watch": "node ./node_modules/.bin/react-app-rewired --inspect test --env=jsdom",
@@ -17,11 +19,13 @@
   "devDependencies": {
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
+    "@types/chai": "^4.1.7",
     "@types/enzyme": "^3.1.15",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/fetch-mock": "^7.2.2",
     "@types/history": "^4.7.2",
     "@types/jest": "24.0.6",
+    "@types/mocha": "^5.2.6",
     "@types/node": "11.9.4",
     "@types/pouchdb-adapter-memory": "^6.1.2",
     "@types/pouchdb-browser": "^6.1.2",
@@ -42,6 +46,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-jest-hoist": "^24.1.0",
     "babel-preset-jest": "^24.1.0",
+    "chai": "^4.2.0",
     "customize-cra": "^0.2.11",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
@@ -50,7 +55,7 @@
     "fetch-mock": "^7.3.0",
     "history": "^4.7.2",
     "jest-junit": "^5.2.0",
-    "monaco-editor-webpack-plugin": "^1.7.0",
+    "mocha": "^6.0.2",
     "pouchdb-adapter-memory": "^7.0.0",
     "pouchdb-browser": "^7.0.0",
     "pouchdb-find": "^7.0.0",
@@ -58,7 +63,6 @@
     "react-app-rewired": "^2.1.0",
     "react-beautiful-dnd": "^10.0.3",
     "react-dom": "^16.8.2",
-    "react-monaco-editor": "0.22.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
