--- a/package.json
+++ b/package.json
@@ -54,8 +54,11 @@
     "export-from-json": "^1.1.1",
     "fetch-mock": "^7.3.0",
     "history": "^4.7.2",
+    "jest-environment-jsdom": "^24.5.0",
+    "jest-environment-jsdom-global": "^1.2.0",
     "jest-junit": "^5.2.0",
     "mocha": "^6.0.2",
+    "parse-domain": "^2.1.7",
     "pouchdb-adapter-memory": "^7.0.0",
     "pouchdb-browser": "^7.0.0",
     "pouchdb-find": "^7.0.0",
@@ -94,7 +97,9 @@
     },
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
-    ]
+    ],
+    "testEnvironment": "jest-environment-jsdom-global",
+    "testURL": "https://dev.tquinlan1992.com"
   },
   "browserslist": [
     ">0.2%",
