--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "enzyme-to-json": "^3.3.5",
     "export-from-json": "^1.1.1",
     "fetch-mock": "^7.3.0",
+    "git-revision-webpack-plugin": "^3.0.3",
     "history": "^4.7.2",
     "jest-environment-jsdom": "^24.5.0",
     "jest-environment-jsdom-global": "^1.2.0",
